--- a/Match the Members/Base.lproj/Main.storyboard
+++ b/Match the Members/Base.lproj/Main.storyboard
@@ -22,7 +22,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68R-no-hLG">
-                                <rect key="frame" x="154.5" y="430.5" width="105" height="35"/>
+                                <rect key="frame" x="154.5" y="413" width="105" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="105" id="3bu-Ar-l23"/>
+                                    <constraint firstAttribute="height" constant="70" id="Ppl-SZ-s7s"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
                                 <state key="normal" title="Start Game">
                                     <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -32,7 +36,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="68R-no-hLG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5IX-mP-p1s"/>
                             <constraint firstItem="QuB-v0-gry" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7ir-Mf-k7x"/>
