--- a/Match the Members/Base.lproj/Main.storyboard
+++ b/Match the Members/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meet the Members!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QuB-v0-gry">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Meet the Members!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QuB-v0-gry">
                                 <rect key="frame" x="66.5" y="104" width="281.5" height="35.5"/>
                                 <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="27"/>
                                 <color key="textColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -36,17 +36,24 @@
                                     <action selector="tapStartButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fri-z3-5u4"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="9f5-Jy-CbB">
+                                <rect key="frame" x="107" y="212" width="200" height="128"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="68R-no-hLG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5IX-mP-p1s"/>
                             <constraint firstItem="QuB-v0-gry" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7ir-Mf-k7x"/>
                             <constraint firstItem="68R-no-hLG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Bem-Fr-gwK"/>
-                            <constraint firstItem="QuB-v0-gry" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="kIR-GA-dlm"/>
+                            <constraint firstItem="9f5-Jy-CbB" firstAttribute="top" secondItem="QuB-v0-gry" secondAttribute="bottom" constant="35" id="Gyf-ga-oPd"/>
+                            <constraint firstItem="68R-no-hLG" firstAttribute="top" secondItem="9f5-Jy-CbB" secondAttribute="bottom" constant="73" id="Mu9-L3-q9w"/>
+                            <constraint firstItem="QuB-v0-gry" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="kIR-GA-dlm"/>
+                            <constraint firstItem="9f5-Jy-CbB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="unk-d8-MCZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="mdbLogo" destination="9f5-Jy-CbB" id="qHb-fa-9zG"/>
                         <outlet property="membersLabel" destination="QuB-v0-gry" id="nHk-8q-fbX"/>
                         <outlet property="startButton" destination="68R-no-hLG" id="YhX-aM-vSs"/>
                         <segue destination="tKI-Ei-d9S" kind="presentation" identifier="segueMain" modalPresentationStyle="fullScreen" id="2A7-ZA-7GW"/>
@@ -374,4 +381,7 @@
             <point key="canvasLocation" x="2415.9420289855075" y="121.875"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="200" height="200"/>
+    </resources>
 </document>
